syntax = "proto3";
package glooeeapi.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/grpcserver/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/solo-projects/projects/grpcserver/api/v1/types.proto";

message EnvoyDetails {
    // The name of the gateway-proxy pod running this instance of envoy.
    string name = 1;
    // Raw representation of this instance's config_dump.
    Raw raw = 2;
}

message ListEnvoyDetailsRequest {}

message ListEnvoyDetailsResponse {
    repeated EnvoyDetails envoy_details = 1;
}

service EnvoyApi {
    rpc ListEnvoyDetails(ListEnvoyDetailsRequest) returns (ListEnvoyDetailsResponse) {}
}
